Fix Dropdown Functionality on Mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1845,6 +1845,16 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     z-index: 25;
   }
 
+  .dropdown-menu {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    position: relative;
+    top: auto;
+    left: auto;
+    z-index: 1000;
+    float: none;
+  }
+
   html {
     width: 100%;
   }
